# WindSentinel

./: .gitignore  Cargo.toml  README.md  ReadMe_man.MD  md5_check.md
.omx/context/: project-structure-intake-20260411T075338Z.md  project-understanding-20260411T075253Z.md  repo-understanding-20260411T075638Z.md
.omx/interviews/: v1-linux-security-platform-20260411T110118Z.md
.omx/plans/: docs-matrix-v1-linux-security-platform.md  implementation-plan-v1-linux-security-platform.md  linux-gap-inventory-v1-linux-security-platform.md  prd-v1-linux-security-platform.md  review-v1-linux-security-platform.md  test-spec-v1-linux-security-platform.md
.omx/specs/: deep-interview-v1-linux-security-platform.md
docs/: README.md  admin-install-use.md  architecture-overview.md  client-install-use.md  code-map.md  database-architecture.md  design-patterns.md  docker-compose-deploy.md  feature-matrix.md  network-architecture.md  release-checklist.md  server-install-use.md  versioning-policy.md
docs/adr/: ADR-0001-stop-uninstall-authorization.md
docs/releases/: v1.0-draft.md
installPack/: signed_config.json
packaging/macos/: build_pkg.sh  com.windsentinel.agent.plist  install_agent.sh  uninstall_agent.sh
server/: .env.example  config.py  crypto.py  hello.md  main.py  models.py  requirements.txt  response_helper.py  run_server.py  storage.py
server/rules/: default.yar
server/static/: 404.html  admin.html  app.js  (+3 more)
src/: config.rs  control.rs  crypto.rs  health.rs  lock.rs  log_store.rs  main.rs  network.rs  policy.rs  process.rs  remote_shell.rs  system_info.rs  types.rs
(+42 files in other folders)
