 [package]
 name = "windsentinel_agent"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
 aes-gcm = "0.10"
 base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
 flate2 = "1.0"
hmac = "0.12"
 rand = "0.8"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
sysinfo = "0.33"
 tokio = { version = "1.38", features = ["full"] }
 uuid = { version = "1.8", features = ["v4"] }
 dirs = "5.0"
 libc = "0.2"
rsa = { version = "0.9", features = ["pem"] }
 pkcs8 = "0.10"
